# aovpn

./: .gitignore  LICENSE  README.md  diff.txt  index.html  package-lock.json  package.json
docs/: Architecture.md  Build_and_Git_Guide.md  Security.md
src/: App.css  App.tsx  guides.ts  index.css
src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  vpn_commands.rs  vpn_deploy.rs
t/: dornMX_Device_Tunnel_profile.xml  dornMX_User_tunnel_profile.xml
