[package]
name = "aovpn"
version = "1.0.0"
description = "A Tauri-based desktop application for managing Windows Always On VPN configurations"
authors = ["leiqos"]
license = "MIT"
repository = "https://github.com/leiqos/aovpn"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
base64 = "0.22.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
